--- a/cadastro2.html
+++ b/cadastro2.html
@@ -11,7 +11,7 @@
 	<meta charset="utf-8">
 	<title>InovaForms</title>
 </head>
-<body>
+<body style="background-image: url(assets/fundo.png); background-repeat: no-repeat; background-attachment: scroll; background-size: 100%;">
 
     <div class="container">
         <div class="row">
@@ -46,8 +46,8 @@
     
             <div class="col s12" style="margin-top: 5%;">
                 <select style="background-color: #323B43 !important;">
-                    <option>Profissional</option>
-                    <option>Estudante</option>
+                    <option id="profissional">Profissional</option>
+                    <option id="estudante">Estudante</option>
                     </select>
                 </div> 
             <div class="col s12" style="margin-top: 5%;">
