--- a/formulario.html
+++ b/formulario.html
@@ -54,13 +54,13 @@
 	      	<h8>Gerencie e aplique os formulários disponíveis ou crie novos</h8>
 	      </div>
 
-	     <div class="col s2 ">
-	      	<nav id="barrinha3">
+	     <div class="col s1 ">
+	      	<nav id="barrinha3" style="padding: 1.5% 1.5% 500% !important;">
 			</nav>
 	      </div>
 
-	      <div class="col s4 ">
-	      	<img class="imagens responsive-img left-align" src="assets/forms.png">
+	      <div class="col s5 ">
+	      	<img class="imagens responsive-img left-align" src="assets/forms.png" style="width: 100%; height: auto;">
 	      </div>
 
 	  	  </div>
