--- a/sobre/membros.html
+++ b/sobre/membros.html
@@ -30,7 +30,14 @@
 	</div>
 	</nav>
 		<!--fim título-->
+<div class ="container">
+	<div class="row">
+		<div class="col s4">
+			
+		</div>
+	</div>
 
+</div>
 		<!--inicio do menu inferior-->
 <div class="footer-fixed">
 	<footer >
