--- a/src formulario aplicar/forms_Aplicar_Espondilete2.html
+++ b/src formulario aplicar/forms_Aplicar_Espondilete2.html
@@ -34,56 +34,56 @@
 		<div class="row">
 
 			<div class="col s12">
-				<h2>BASFI- Espondilite Anquilosante</h2>
+				<h6 style="font-size: 35px;">BASFI- Espondilite Anquilosante</h6>
 			</div>
 
 			<div class="col s12">
-				<h6>1. Colocar meias e amarrar sapatos sem ajuda ou auxílio :</h6>
+				<h6 style="font-size: 35px;">1. Colocar meias e amarrar sapatos sem ajuda ou auxílio :</h6>
 			</div>
 			<div class="col s12" >
 				<div class="range-wrap">
 					<output class="bubble"></output>
-					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
+					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10" style:"font-size:25px"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
 				</div>
 			</div>
 
 			<div class="col s12">
-				<h6>2. Pegar uma caneta no chão sem ajuda, partindo da posição em pé:</h6>
+				<h6 style="font-size: 35px;">2. Pegar uma caneta no chão sem ajuda, partindo da posição em pé:</h6>
 			</div>
 			<div class="col s12" >
 				<div class="range-wrap">
 					<output class="bubble"></output>
-					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
+					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10" style:"font-size:25px"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
 				</div>
 			</div>
 
 			<div class="col s12">
-				<h6>3. Alcançar uma prateleira acima da sua cabeça, sem ajuda:</h6>
+				<h6 style="font-size: 35px;">3. Alcançar uma prateleira acima da sua cabeça, sem ajuda:</h6>
 			</div>
 			<div class="col s12" >
 				<div class="range-wrap">
 					<output class="bubble"></output>
-					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
+					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10" style:"font-size:25px"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
 				</div>
 			</div>
 
 			<div class="col s12">
-				<h6>4. Levantar de uma cadeira sem braços, sem a ajuda das próprias mãos ou ajuda de outros:</h6>
+				<h6 style="font-size: 35px;">4. Levantar de uma cadeira sem braços, sem a ajuda das próprias mãos ou ajuda de outros:</h6>
 			</div>
 			<div class="col s12" >
 				<div class="range-wrap">
 					<output class="bubble"></output>
-					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
+					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10" style:"font-size:25px"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
 				</div>
 			</div>
 
 			<div class="col s12">
-				<h6>5. Da posição de deitado no chão, consegue levantar-se sem ajuda:</h6>
+				<h6 style="font-size: 35px;">5. Da posição de deitado no chão, consegue levantar-se sem ajuda:</h6>
 			</div>
 			<div class="col s12" >
 				<div class="range-wrap">
 					<output class="bubble"></output>
-					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
+					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10" style:"font-size:25px"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
 				</div>
 			</div>
 
