--- a/src formulario aplicar/forms_Aplicar_pelvico3.html
+++ b/src formulario aplicar/forms_Aplicar_pelvico3.html
@@ -35,297 +35,297 @@
 		<div class="row">
 
 	      <div class="col s12">
-	      	<h2 style="color: #30566B; margin-top: 0px; margin-bottom: 0px;">Questionário de Impacto no Assoalho Pélvico</h2>
+	      	<h6 style="color: #30566B; margin-top: 0px; margin-bottom: 0px;">Questionário de Impacto no Assoalho Pélvico</h6>
 	      </div>
 
 	      <div class="col s12">
-	      	<h6>1. Como os sintomas citados geralmente afetam sua habilidade de realizar atividades domésticas
+	      	<h6 style="font-size: 35px;">1. Como os sintomas citados geralmente afetam sua habilidade de realizar atividades domésticas
 			(ex: cozinhar, arrumar a casa, lavar
 			roupas)?</h6>
 	      </div>
 
 	      <div class="col s12">
-	    	<p class="bexiga exo2-semi-bold-tuna-16px">Bexiga</p>
+	    	<p class="bexiga exo2-semi-bold-tuna-16px" style="margin-bottom:3%">Bexiga</p>
 	  	  </div>
 
 	      <div class="col s12">
 		      <form action="#">
 			      <label>
 			        <input name="group1" type="radio" checked />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Nem um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Nem um pouco</span>
 			      </label>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Um pouco</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input class="with-gap" name="group1" type="radio"  />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Moderadamente</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Moderadamente</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Bastante</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Bastante</span>
 			      </label>
 			    </p>
 			  </form>
 	  	</div>
 
 	  	<div class="col s12">
-	    	<p class="bexiga exo2-semi-bold-tuna-16px">Intestino</p>
+	    	<p class="bexiga exo2-semi-bold-tuna-16px" style="margin-bottom:3%">Intestino</p>
 	  	  </div>
 
 	      <div class="col s12">
 		      <form action="#">
 			      <label>
 			        <input name="group1" type="radio" checked />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Nem um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Nem um pouco</span>
 			      </label>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Um pouco</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input class="with-gap" name="group1" type="radio"  />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Moderadamente</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Moderadamente</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Bastante</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Bastante</span>
 			      </label>
 			    </p>
 			  </form>
 	  	</div>
 
 	  	<div class="col s12">
-	    	<p class="bexiga exo2-semi-bold-tuna-16px">Vagina</p>
+	    	<p class="bexiga exo2-semi-bold-tuna-16px" style="margin-bottom:3%">Vagina</p>
 	  	  </div>
 
 	      <div class="col s12">
 		      <form action="#">
 			      <label>
 			        <input name="group1" type="radio" checked />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Nem um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Nem um pouco</span>
 			      </label>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Um pouco</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input class="with-gap" name="group1" type="radio"  />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Moderadamente</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Moderadamente</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Bastante</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Bastante</span>
 			      </label>
 			    </p>
 			  </form>
 	  	</div>
 
 	  	<div class="col s12">
-	      	<h6>2. Como os sintomas citados geralmente afetam sua habilidade de realizar atividades físicas como caminhar, nadar ou outro tipo de exercício?</h6>
+	      	<h6 style="font-size: 35px;">2. Como os sintomas citados geralmente afetam sua habilidade de realizar atividades físicas como caminhar, nadar ou outro tipo de exercício?</h6>
 	      </div>
 
 	      <div class="col s12">
-	    	<p class="bexiga exo2-semi-bold-tuna-16px">Bexiga</p>
+	    	<p class="bexiga exo2-semi-bold-tuna-16px" style="margin-bottom:3%">Bexiga</p>
 	  	  </div>
 
 	      <div class="col s12">
 		      <form action="#">
 			      <label>
 			        <input name="group1" type="radio" checked />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Nem um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Nem um pouco</span>
 			      </label>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Um pouco</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input class="with-gap" name="group1" type="radio"  />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Moderadamente</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Moderadamente</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Bastante</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Bastante</span>
 			      </label>
 			    </p>
 			  </form>
 	  	</div>
 
 	  	<div class="col s12">
-	    	<p class="bexiga exo2-semi-bold-tuna-16px">Intestino</p>
+	    	<p class="bexiga exo2-semi-bold-tuna-16px" style="margin-bottom:3%">Intestino</p>
 	  	  </div>
 
 	      <div class="col s12">
 		      <form action="#">
 			      <label>
 			        <input name="group1" type="radio" checked />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Nem um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Nem um pouco</span>
 			      </label>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Um pouco</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input class="with-gap" name="group1" type="radio"  />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Moderadamente</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Moderadamente</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Bastante</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Bastante</span>
 			      </label>
 			    </p>
 			  </form>
 	  	</div>
 
 	  	<div class="col s12">
-	    	<p class="bexiga exo2-semi-bold-tuna-16px">Vagina</p>
+	    	<p class="bexiga exo2-semi-bold-tuna-16px" style="margin-bottom:3%">Vagina</p>
 	  	  </div>
 
 	      <div class="col s12">
 		      <form action="#">
 			      <label>
 			        <input name="group1" type="radio" checked />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Nem um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Nem um pouco</span>
 			      </label>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Um pouco</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input class="with-gap" name="group1" type="radio"  />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Moderadamente</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Moderadamente</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Bastante</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Bastante</span>
 			      </label>
 			    </p>
 			  </form>
 	  	</div>
 
 	  	<div class="col s12">
-	      	<h6>3. Geralmente afetam atividades de entretenimento, como ir ao cinema ou a um show?</h6>
+	      	<h6 style="font-size: 35px;">3. Geralmente afetam atividades de entretenimento, como ir ao cinema ou a um show?</h6>
 	      </div>
 
 	      <div class="col s12">
-	    	<p class="bexiga exo2-semi-bold-tuna-16px">Bexiga</p>
+	    	<p class="bexiga exo2-semi-bold-tuna-16px" style="margin-bottom:3%">Bexiga</p>
 	  	  </div>
 
 	      <div class="col s12">
 		      <form action="#">
 			      <label>
 			        <input name="group1" type="radio" checked />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Nem um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Nem um pouco</span>
 			      </label>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Um pouco</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input class="with-gap" name="group1" type="radio"  />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;"">Moderadamente</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 16px;"">Moderadamente</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Bastante</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Bastante</span>
 			      </label>
 			    </p>
 			  </form>
 	  	</div>
 
 	  	<div class="col s12">
-	    	<p class="bexiga exo2-semi-bold-tuna-16px">Intestino</p>
+	    	<p class="bexiga exo2-semi-bold-tuna-16px" style="margin-bottom:3%">Intestino</p>
 	  	  </div>
 
 	      <div class="col s12">
 		      <form action="#">
 			      <label>
 			        <input name="group1" type="radio" checked />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Nem um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Nem um pouco</span>
 			      </label>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Um pouco</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input class="with-gap" name="group1" type="radio"  />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Moderadamente</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Moderadamente</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Bastante</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Bastante</span>
 			      </label>
 			    </p>
 			  </form>
 	  	</div>
 
 	  	<div class="col s12">
-	    	<p class="bexiga exo2-semi-bold-tuna-16px">Vagina</p>
+	    	<p class="bexiga exo2-semi-bold-tuna-16px" style="margin-bottom:3%">Vagina</p>
 	  	  </div>
 
 	      <div class="col s12">
 		      <form action="#">
 			      <label>
 			        <input name="group1" type="radio" checked />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Nem um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Nem um pouco</span>
 			      </label>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Um pouco</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Um pouco</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input class="with-gap" name="group1" type="radio"  />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Moderadamente</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Moderadamente</span>
 			      </label>
 			    </p>
 			    <p>
 			      <label>
 			        <input name="group1" type="radio" />
-			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 250%; margin-bottom: 16px;">Bastante</span>
+			        <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Bastante</span>
 			      </label>
 			    </p>
 			  </form>
