--- a/cadastro.html
+++ b/cadastro.html
@@ -11,7 +11,7 @@
 	<meta charset="utf-8">
 	<title>InovaForms</title>
 </head>
-<body>
+<body style="background-image: url(assets/fundo.png); background-repeat: no-repeat; background-attachment: scroll; background-size: 100%;">
 
     <div class="container">
         <div class="row">
