--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 	<meta charset="utf-8">
 	<title>InovaForms</title>
 </head>
-<body>
+<body style="background-image: url(assets/fundo.png); background-repeat: no-repeat; background-attachment: scroll; background-size: 100%;">
 
     <div class="container">
         <div class="row">
@@ -60,7 +60,7 @@
         </div>
         <div class="row">
             <div class="col s12" style="margin-top: 5%;">
-              <a href="#">
+              <a href="senha/recuemail.html">
               <h7 style="display: block;
                 margin-left: auto;
                 margin-right: auto; position:relative !important; text-align: center; font-size: 35px; font-family: 'Exo 2-Semi'; color: #323B43;">Esqueceu sua senha?</h7> 
