--- a/src formulario aplicar/forms_Aplicar_pelvico.html
+++ b/src formulario aplicar/forms_Aplicar_pelvico.html
@@ -34,21 +34,25 @@
 	<div class="container">
 		<div class="row">
 	      <div class="col s12">
-	      	<h2 style="color: #30566B; margin-top: 0px; margin-bottom: 0px;">Questionário de Impacto no Assoalho Pélvico</h2>
+	      	<h6 style="color: #30566B; margin-top: 0px; margin-bottom: 0px;">Questionário de Impacto no Assoalho Pélvico</h6>
 	      </div>
 	      <div class="col s12">
 	      	<h6 style="font-size: 40px; color: #323B43; margin-bottom: 16px;">Dados:</h6>
-	      	<p style="font-size: 25px; color: #323B43; margin-bottom: 16px; font-family: 'Exo 2-Regular';">7 perguntas com 4 alternativas para cada área afetada.</p>
+	      	<p style="font-size: 35px; color: #323B43; margin-bottom: 16px; font-family: 'Exo 2-Regular';">7 perguntas com 4 alternativas para cada área afetada.</p>
 	      </div>
 	      <div class="col s12">
 	      	<h6 style="font-size: 40px; color: #323B43; margin-bottom: 16px;">Instruções:</h6>
-	      	<p style="font-size: 25px; color: #323B43; margin-bottom: 16px; font-family: 'Exo 2-Regular';">Para cada pergunta, marque a resposta que melhor descreva o quanto as atividades, relacionamentos ou sentimentos da sua paciente têm sido afetados pelos sintomas ou condições de sua bexiga, intestino ou vagina, nos últimos 3 meses. </p>
+	      	<p style="font-size: 35px; color: #323B43; margin-bottom: 16px; font-family: 'Exo 2-Regular';">Para cada pergunta, marque a resposta que melhor descreva o quanto as atividades, relacionamentos ou sentimentos da sua paciente têm sido afetados pelos sintomas ou condições de sua bexiga, intestino ou vagina, nos últimos 3 meses. </p>
 	      </div>
-
-	      <a class="btn" style=" position: relative;
-		  left: 25%; margin-top: 10%;
-		  " href="forms_Aplicar_pelvico2.html"><i class="material-icons left">arrow_forward</i><div class="col s2 " ><nav id="barrinha4" style="color: #FFFF;"></nav></div>Prosseguir para aplicaçao</a>
-	  </div>
+ </div>
+ <div class="row">
+	 <div class="col s12">
+	      <a class="btn" style="width: 80%; height: 100px; display: block;
+		  margin-left: auto;
+		  margin-right: auto; position:relative !important;" href="forms_Aplicar_pelvico2.html"><i class="material-icons left">arrow_forward</i><div class="col s2 "><nav id="barrinha4" style="color: #FFFF;"></nav></div><h7 style="
+			margin-top: 10%; font-size: 40px;
+			text-align: center; color:white;">Prosseguir para aplicaçao</h7></a>
+	 </div></div>
 	</div>
 
 <!--inicio do menu inferior-->
