--- a/termouso.html
+++ b/termouso.html
@@ -11,7 +11,7 @@
 	<meta charset="utf-8">
 	<title>InovaForms</title>
 </head>
-<body>
+<body style="background-image: url(assets/fundo.png); background-repeat: no-repeat; background-attachment: scroll; background-size: 100%;">
 
     <div class="container">
         <div class="row">
@@ -19,16 +19,71 @@
                 <img src="assets/logo.png" style="display: block;
                 margin-left: auto;
                 margin-right: auto; position:relative !important;
-  margin-top: 5%; width: 100%; height: auto; margin-bottom: 8%;
+  margin-top: 5%; width: 100%; height: auto; margin-bottom: 5%;
    ">
             </div>
         </div>
         <div class="row">
             <div class="col s12">
-                <a href="login.html">
                 <h7 style="display: block;
                 margin-left: auto;
                 margin-right: auto; position:relative !important; text-align: center; font-size: 40px; font-family: 'Exo 2-Semi'; color: #323B43;">Termos de Uso</h7> 
-            </a>
             </div>
         </div>
+        </div>
+
+        <div class="row" style="background-color: #EBF0F1; border-radius: 3%; margin-left: 5%; margin-right: 5%;"><div class="container">
+            <div class="col s12">
+                <h6 style="font-size:42px;font-family: 'Exo 2-Semi'; color:#30566B;">Os profissionais de saúde, durante o processo de avaliação, contam com vários instrumentos que mensuram o grau de incapacidade e promovem suporte na escolha das intervenções. <p>Também tornam-se indispensáveis para comparar os resultados obtidos após uma determinada técnica. Alguns destes instrumentos são escalas e testes validados entre as populações alvo. Contam com escores, domínios e perguntas específicas.</p>
+                <p>	A problemática da aplicação destes começa pela necessidade de anotar os resultados em papéis e, muitas vezes, não dar tempo de obter um resultado na hora. Além disso, muitos instrumentos podem confundir os avaliadores na hora de mensurar os dados e levar mais tempo na análise.</p><p>  Em âmbito nacional, este aplicativo poderia até mesmo favorecer a desburocratização e dando suporte em todos os níveis de atenção.</p></h6>
+            </div>
+            
+            </div>
+            
+            </div>
+
+<div class="container">
+    <div class="row">
+        <div class="col s12">
+            <form action="#">
+            <p>
+                <label>
+                  <input type="checkbox" class="filled-in"/>
+                  <span style="font-family: 'Exo 2-Semi'; font-size: 35px; color:#323B43">Li e concordo com os termos de uso.</span>
+                </label>
+              </p>
+              </form>
+</div>
+        </div>
+
+        <div class="row">
+            <div class="col s6">
+                <button class="avanar valign-text-middle exo2-bold-white-16px modal-trigger" href="#modal1" style="margin-top: 30%; background-color: white; color: #30566B; border-style: double; border-color: #30566B;">Recusar</button>
+            </div>
+            <div class="col s6">
+                <a href="index.html"><button class="avanar valign-text-middle exo2-bold-white-16px" style="margin-top: 30%;">Aceitar</button></a>
+            </div>
+            </div>
+    </div>
+
+
+	<!-- Modal Structure -->
+    <div id="modal1" class="modal" style="background-color: #30566B;">
+        <div class="modal-content">
+            <h6 style="color: white; font-size: 40px;">Para prosseguir com o uso da aplicação, é necessário assinalar "Li e Concordo com os Termos de Uso" e aceitá-los.</h6>
+        </div>
+            <div class="row" style="background-color: #30566B;">		
+                <div class="modal-footer" style="background-color: #30566B;">
+                    <div class="col s12">
+            <button class=" modal-close avanar valign-text-middle exo2-bold-white-16px" href="#!" style="display: inline-block;
+            margin-left: auto;
+            margin-right: auto; width: auto; height: auto; border-style: double; border-color: #5ABBE5; color: #5ABBE5;">Concluir</button>
+</div>
+		</div>	
+</div>
+    </div>
+    <!--fim modal de confirmar exclusão-->
+
+
+    </body>
+    </html>
