--- a/src formulario aplicar/forms_Aplicar.html
+++ b/src formulario aplicar/forms_Aplicar.html
@@ -51,56 +51,44 @@
 		<!--inicio categorias-->
 		<a href="forms_aplicar_fisioterapia.html"><div class="row">
 			<div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 10%; background-color: #5ABBE5;">
-				<img src="../assets/icon_star.png" style="width: 9%; margin-top: 1%;">
-				<h6 style="display: inline-block; margin-left: 5%; padding: 0px; position:relative !important;
-				top: 40%;
-				transform: translateY(-40%); font-size: 50px; color:white;">Fisioterapia</h6>
+				 				<h6 style="display: inline-block; margin-left: 5%; padding: 0px; position:relative !important;
+				   font-size: 50px; color:white;">Fisioterapia</h6>
 			</div>
 		</div></a>
 
 		<div class="row">
-			<div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 5%; background-color: #50A5C8;">
-				<img src="../assets/icon_star.png" style="width: 9%; margin-top: 1%;">
-				<h6 style="display: inline-block; margin-left: 5%; padding: 0px; position:relative !important;
-				top: 40%;
-				transform: translateY(-40%); font-size: 50px; color:white;">Medicina</h6>
-			</div>
+			<a href="forms_aplicar_neuro.html"> <div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 5%; background-color: #50A5C8;">
+				 				<h6 style="display: inline-block; margin-left: 5%; padding: 0px; position:relative !important;
+				   font-size: 50px; color:white;">Neurologia</h6>
+			</div></a>
 		</div>
 
 		<div class="row">
-			<div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 5%; background-color: #4A96B5;">
-				<img src="../assets/icon_star.png" style="width: 9%; margin-top: 1%;">
-				<h6 style="display: inline-block; margin-left: 5%; padding: 0px; position:relative !important;
-				top: 40%;
-				transform: translateY(-40%);font-size: 50px; color:white;">Enfermagem</h6>
-			</div>
+			<a href="forms_aplicar_enfermagem.html">	<div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 5%; background-color: #4A96B5;">
+				 <h6 style="display: inline-block; margin-left: 5%; padding: 0px; position:relative !important;
+				  font-size: 50px; color:white;">Enfermagem</h6>
+			</div> </a>
 		</div>
 
 		<div class="row">
-			<div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 5%; background-color: #42849E;">
-				<img src="../assets/icon_star.png" style="width: 9%; margin-top: 1%;">
+			<a href="forms_aplicar_saudecoletiva.html"><div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 5%; background-color: #42849E;">
 				<h6 style="display: inline-block; margin-left: 5%; padding: 0px; position:relative !important;
-				top: 40%;
-				transform: translateY(-40%);font-size: 50px; color:white;">Pediatria</h6>
-			</div>
+				  font-size: 50px; color:white;">Saúde coletiva / Qualidade de vida</h6>
+			</div></a>
 		</div>
 
 		<div class="row">
-			<div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 5%; background-color: #3A7287;">
-				<img src="../assets/icon_star.png" style="width: 9%; margin-top: 1%;">
+			<a href="forms_aplicar_pacientecritico.html"> <div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 5%; background-color: #3A7287;">
 				<h6 style="display: inline-block; margin-left: 5%; padding: 0px; position:relative !important;
-				top: 40%;
-				transform: translateY(-40%);font-size: 50px; color: white;">Psicologia</h6>
-			</div>
+				  font-size: 50px; color: white;">Avaliação do Paciente Critico</h6>
+			</div></a>
 		</div>
 
 		<div class="row">
-			<div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 5%; background-color: #315D6C;">
-				<img src="../assets/icon_star.png" style="width: 9%; margin-top: 1%;">
-				<h6 style="display: inline-block; margin-left: 5%; padding: 0px; position:relative !important;
-				top: 40%;
-				transform: translateY(-40%);font-size: 50px; color: white;">Odontologia</h6>
-			</div>
+			<a href="forms_aplicar_medicina.html"> 	<div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 5%; background-color: #315D6C;">
+				 				<h6 style="display: inline-block; margin-left: 5%; padding: 0px; position:relative !important;
+				  font-size: 50px; color: white;">Medicina</h6>
+			</div></a>
 		</div>
 		<!--fim categorias-->
 	</div>
