--- a/src formulario aplicar/forms_Aplicar_Espondilete2.html
+++ b/src formulario aplicar/forms_Aplicar_Espondilete2.html
@@ -43,7 +43,7 @@
 			<div class="col s12" >
 				<div class="range-wrap">
 					<output class="bubble"></output>
-					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10" style:"font-size:25px"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
+					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10" style="font-size:25px"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
 				</div>
 			</div>
 
@@ -53,7 +53,7 @@
 			<div class="col s12" >
 				<div class="range-wrap">
 					<output class="bubble"></output>
-					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10" style:"font-size:25px"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
+					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10" style="font-size:25px"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
 				</div>
 			</div>
 
@@ -63,7 +63,7 @@
 			<div class="col s12" >
 				<div class="range-wrap">
 					<output class="bubble"></output>
-					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10" style:"font-size:25px"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
+					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10" style="font-size:25px"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
 				</div>
 			</div>
 
@@ -73,7 +73,7 @@
 			<div class="col s12" >
 				<div class="range-wrap">
 					<output class="bubble"></output>
-					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10" style:"font-size:25px"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
+					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10" style="font-size:25px"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
 				</div>
 			</div>
 
@@ -83,12 +83,68 @@
 			<div class="col s12" >
 				<div class="range-wrap">
 					<output class="bubble"></output>
-					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10" style:"font-size:25px"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
+					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10" style="font-size:25px"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
 				</div>
 			</div>
 
 			<div class="col s12">
-				<a href="forms_Aplicar_Espondilete3.html"><button class="avanar valign-text-middle exo2-bold-white-16px" style="display: block;
+				<h6 style="font-size: 35px;">6. Ficar em pé por 10 minutos sem desconforto:</h6>
+			</div>
+			<div class="col s12" >
+				<div class="range-wrap">
+					<output class="bubble"></output>
+					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10" style="font-size:50px; size: 50px;"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
+				</div>
+			</div>
+
+			<div class="col s12">
+				<h6 style="font-size: 35px;">7. Subir 12 ou 15 degraus sem auxílio de corrimão ou apoio de outra pessoa:</h6>
+			</div>
+			<div class="col s12" >
+				<div class="range-wrap">
+					<output class="bubble"></output>
+					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
+				</div>
+			</div>
+
+			<div class="col s12">
+				<h6 style="font-size: 35px;">8. Olhar por cima do ombro sem virar o corpo:</h6>
+			</div>
+			<div class="col s12" >
+				<div class="range-wrap">
+					<output class="bubble"></output>
+					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
+				</div>
+			</div>
+
+			<div class="col s12">
+				<h6 style="font-size: 35px;">9. Fazer atividades físicas (exercícios de fisioterapia, cuidar do jardim, praticar algum esporte):</h6>
+			</div>
+			<div class="col s12" >
+				<div class="range-wrap">
+					<output class="bubble"></output>
+					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
+				</div>
+			</div>
+
+			<div class="col s12">
+				<h6 style="font-size: 35px;">10. Fazer atividades que durem o dia todo, seja em casa ou no trabalho:</h6>
+			</div>
+			<div class="col s12" >
+				<div class="range-wrap">
+					<output class="bubble"></output>
+					<label style="font-size:25px">0</label><label style="left: 95%;position: relative; font-size:25px">10</label><input type="range" class="range" min="0" max="10"><label style="font-size: 25px;">Fácil</label><label  style="left: 82%;position: relative; font-size: 25px;">Impossível</label>
+				</div>
+			</div>
+
+
+
+
+
+
+
+			<div class="col s12">
+				<a href="../src formulario concluido/forms_conclusao2.html"><button class="avanar valign-text-middle exo2-bold-white-16px" style="display: block;
 					margin-left: auto;
 					margin-right: auto; margin-top: 14%;">Avançar</button></a>
 			</div>
