--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
 
 	  <div class="row">
 	      <div class="col s4 ">
-	      	<img class="imagens responsive-img left-align" id="fotopessoa" src="assets/perfil.png">
+	     <img class="imagens responsive-img left-align" id="fotopessoa" src="assets/perfil.png" style="width: 100%; height: auto;">
 	      </div>
 	      <div class="col s4 ">
 	      	<nav id="barrinha">
 			</nav>
 	      </div>
-	      <div class="col s4 ">
+	      <div class="col s4" style="margin-top: 3%;">
 	      	<h7 class="pessoa">Gabriel Rocha</h7>
-	      	<button class="editarperfil">Editar Perfil</button>
+	      	<button class="editarperfil" onclick="window.location='perfil/perfil.html'">Editar Perfil</button>
 	      </div>
 	  </div>
 
