--- a/neurologia/ait2.html
+++ b/neurologia/ait2.html
@@ -44,12 +44,12 @@
 
 		<div class="col s12">
 				<label>
-				  <input name="group1" type="radio" checked />
+				<input name="group1" type="radio" id="group1" value="1" />
 				  <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Maior ou Igual a 60 anos.</span>
 				</label>
 			  <p>
 				<label>
-				  <input name="group1" type="radio" />
+				  <input name="group1" type="radio" id="group1" value="0"/>
 				  <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Menor que 60 anos.</span>
 				</label>
 			  </p>
@@ -66,18 +66,18 @@
 
 		<div class="col s12">
 				<label>
-				  <input name="group1" type="radio" checked />
+				  <input name="group2" type="radio" id="140" value="1"/>
 				  <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">PAS Maior Que 140</span>
 				</label>
 			  <p>
 				<label>
-				  <input name="group1" type="radio" />
+				  <input name="group2" type="radio" id="90" value="1" />
 				  <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">PAD Maior ou Igual a 90</span>
 				</label>
 			  </p>
 			  <p>
 				<label>
-				  <input class="with-gap" name="group1" type="radio"  />
+				  <input class="with-gap" name="group2" type="radio" id="" value="0" />
 				  <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 16px;">Outro</span>
 				</label>
 			  </p>
@@ -94,18 +94,18 @@
 
 		<div class="col s12">
 				<label>
-				  <input name="group1" type="radio" checked />
+				  <input name="group3" type="radio" id="fu" value="2" />
 				  <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Fraqueza unilateral</span>
 				</label>
 			  <p>
 				<label>
-				  <input name="group1" type="radio" />
+				  <input name="group3" type="radio"  id="dl" value="1" />
 				  <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Distúrbio de linguagem</span>
 				</label>
 			  </p>
 			  <p>
 				<label>
-				  <input class="with-gap" name="group1" type="radio"  />
+				  <input class="with-gap" name="group3" type="radio" id="" value="0" />
 				  <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 16px;">Outro</span>
 				</label>
 			  </p>
@@ -119,18 +119,18 @@
     
             <div class="col s12">
                     <label>
-                      <input name="group1" type="radio" checked />
+                      <input name="group4" type="radio"  id="60minutos" value="2" />
                       <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Maior ou Igual a 60 Minutos</span>
                     </label>
                   <p>
                     <label>
-                      <input name="group1" type="radio" />
+                      <input name="group4" type="radio" id="59minutos" value="1" />
                       <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Entre 10 e 59 Minutos</span>
                     </label>
                   </p>
                   <p>
                     <label>
-                      <input class="with-gap" name="group1" type="radio"  />
+                      <input class="with-gap" name="group1" type="radio" id="0"  value="0"/>
                       <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 16px;">Menos que 10 Minutos</span>
                     </label>
                   </p>
@@ -141,9 +141,9 @@
 
 	      <div class="col s12">
 
-	      <a href="../src formulario concluido/forms_conclusao.html" ><button class="avanar valign-text-middle exo2-bold-white-16px" style="margin-top: 100px; display: block;
+	     ><button class="avanar valign-text-middle exo2-bold-white-16px" style="margin-top: 100px; display: block;
 			margin-left: auto;
-			margin-right: auto;">Avançar</button></a>
+			margin-right: auto;" onclick="Resultado();">Avançar</button>
 	  </div>
 
 	</div>
@@ -168,4 +168,11 @@
 </div>
 <!--fim do menu inferior-->
 </body>
+<script>
+	function Resultado(){
+		let inputs = document.querySelectorAll('input[type=radio]:checked');
+		alert (inputs.length);
+}	
+
+</script>
 </html>
