--- a/pacientes/pacientes_formulario.html
+++ b/pacientes/pacientes_formulario.html
@@ -94,7 +94,7 @@
 
 	console.log(buttonClick3);
 	buttonClick3.addEventListener("click",function(event){
-	    window.location.href = "../pacientes/pacientes_visualizar.html";
+	    window.location.href = "../pacientes/pacientes_visualizar.php";
 	    console.log("Tentei redirecionar!!!");
 	});
 	console.log(buttonClick4);
