--- a/apresentacao.html
+++ b/apresentacao.html
@@ -32,10 +32,10 @@
 		</div></div>
         <div class="row">
 			<div class="col s12">
-    		<img src="assets/formsa.png" style="width: 100%;height: auto; margin-left: auto;
+                <a href="#wall-2"><img src="assets/formsa.png" style="width: 100%;height: auto; margin-left: auto;
             margin-right: auto; display: block;
 	position:relative !important;
-	top: 40%;">
+	top: 40%;"> </a>
 		</div>
     </div>
     <div class="row">
@@ -64,10 +64,10 @@
 		</div></div>
         <div class="row">
 			<div class="col s12">
-    		<img src="assets/pacientea.png" style="width: 100%;height: auto; margin-left: auto;
+                <a href="#wall-3"><img src="assets/pacientea.png" style="width: 100%;height: auto; margin-left: auto;
             margin-right: auto; display: block;
 	position:relative !important;
-	top: 40%;">
+	top: 40%;"> </a>
 		</div>
     </div>
     <div class="row">
