--- a/sobre/membros.html
+++ b/sobre/membros.html
@@ -33,10 +33,178 @@
 <div class ="container">
 	<div class="row">
 		<div class="col s4">
-			
-		</div>
+			<img src="../assets/smd.png" style="display: block;
+			margin-left: auto;
+			margin-right: auto; position:relative !important;
+ width: 100%; height: auto;
+">		</div>
+<div class="col s8">
+	<h6 style="font-family: 'Exo 2-Semi'; margin-top:5%; font-size:45px; ">Projetistas, alunos do curso de Sistemas e Mídias Digitais (SMD)</h6>
+</div>
 	</div>
+	<div class="row">
+		<div class="col s12">
+			<hr style="color:#30566B; background-color:#30566B; height: 5px; border-top-left-radius: 3%;"/>
+		</div></div>
+		<div class="row">
+			<div class="col s4">
+				<img src="../assets/bia.png" style="display: block;
+				margin-left: auto;
+				margin-right: auto; position:relative !important;
+	 width: 100%; height: auto;
+	">		</div>
+	<div class="col s8">
+		<h6 style="font-family: 'Exo 2-Semi'; margin-top:5%; font-size:40px; ">ANA BIATRIZ CAVALCANTE
+		<p  style="font-size:35px;">bia.cavalcante.veras@email.com</p>
+		<p  style="font-size:35px;">lattes.cnpq.br/5746352470418251</p>
+	</h6>
+	</div>
+		</div>
+		<div class="row">
+			<div class="col s4">
+				<img src="../assets/andreza.png" style="display: block;
+				margin-left: auto;
+				margin-right: auto; position:relative !important;
+	 width: 100%; height: auto;
+	">		</div>
+	<div class="col s8">
+		<h6 style="font-family: 'Exo 2-Semi'; margin-top:5%; font-size:40px; ">ANDREZA DEYSE LEAL DE SOUSA
+		<p  style="font-size:35px;">andrezaleal12@gmail.com</p>
+		<p  style="font-size:35px;">lattes.cnpq.br/insiraaqui</p>
+	</h6>
+	</div>
+		</div>
+		<div class="row">
+			<div class="col s4">
+				<img src="../assets/clessio.png" style="display: block;
+				margin-left: auto;
+				margin-right: auto; position:relative !important;
+	 width: 100%; height: auto;
+	">		</div>
+	<div class="col s8">
+		<h6 style="font-family: 'Exo 2-Semi'; margin-top:5%; font-size:40px; ">ANTº CLÉSSIO SOARES DE OLIVEIRA
+		<p  style="font-size:35px;">clessiooliveira00@gmail.com</p>
+		<p  style="font-size:35px;">lattes.cnpq.br/insiraaqui</p>
+	</h6>
+	</div>
+		</div>
+		<div class="row">
+			<div class="col s4">
+				<img src="../assets/jv.png" style="display: block;
+				margin-left: auto;
+				margin-right: auto; position:relative !important;
+	 width: 100%; height: auto;
+	">		</div>
+	<div class="col s8">
+		<h6 style="font-family: 'Exo 2-Semi'; margin-top:5%; font-size:40px; ">JOÃO VICTOR SAMPAIO DA SILVA
+		<p  style="font-size:35px;">joao5victor5ss@gmail.com</p>
+		<p  style="font-size:35px;">lattes.cnpq.br/3640158524887485</p>
+	</h6>
+	</div>
+		</div>
+		<div class="row">
+			<div class="col s4">
+				<img src="../assets/eduarda.png" style="display: block;
+				margin-left: auto;
+				margin-right: auto; position:relative !important;
+	 width: 100%; height: auto;
+	">		</div>
+	<div class="col s8">
+		<h6 style="font-family: 'Exo 2-Semi'; margin-top:5%; font-size:40px; ">MARIA EDUARDA FERREIRA LEANDRO
+		<p  style="font-size:35px;">mariaeduardafle@gmail.com</p>
+		<p  style="font-size:35px;">lattes.cnpq.br/2231028190063171</p>
+	</h6>
+	</div>
+		</div>
 
+		<div class="row" style="margin-top: 15%;">
+			<div class="col s4">
+				<img src="../assets/icon_inova.png" style="display: block;
+				margin-left: auto;
+				margin-right: auto; position:relative !important;
+	 width: 70%; height: auto; margin-top: 10%;
+	">		</div>
+	<div class="col s8">
+		<h6 style="font-family: 'Exo 2-Semi'; margin-top:5%; font-size:45px; ">Equipe idealista que faz parte do projeto InovaFisio UFC</h6>
+	</div>
+		</div>
+		<div class="row">
+			<div class="col s12">
+				<hr style="color:#30566B; background-color:#30566B; height: 5px; border-top-left-radius: 3%;"/>
+			</div></div>
+
+			<div class="row">
+				<div class="col s4">
+					<img src="../assets/professor.png" style="display: block;
+					margin-left: auto;
+					margin-right: auto; position:relative !important;
+		 width: 100%; height: auto;
+		">		</div>
+		<div class="col s8">
+			<h6 style="font-family: 'Exo 2-Semi'; margin-top:5%; font-size:40px; ">PROF. DR. JOSÉ CARLOS TATMATSU ROCHA
+			<p  style="font-size:35px;">lattes.cnpq.br/5824495261923279</p>
+		</h6>
+		</div>
+			</div>
+			<div class="row">
+				<div class="col s4">
+					<img src="../assets/karol.png" style="display: block;
+					margin-left: auto;
+					margin-right: auto; position:relative !important;
+		 width: 100%; height: auto;
+		">		</div>
+		<div class="col s8">
+			<h6 style="font-family: 'Exo 2-Semi'; margin-top:5%; font-size:40px; ">ANA KAROLINE ALMEIDA DA SILVA
+			<p  style="font-size:35px;">lattes.cnpq.br/2046620233291998</p>
+		</h6>
+		</div>
+			</div>
+			<div class="row">
+				<div class="col s4">
+					<img src="../assets/luan.png" style="display: block;
+					margin-left: auto;
+					margin-right: auto; position:relative !important;
+		 width: 100%; height: auto;
+		">		</div>
+		<div class="col s8">
+			<h6 style="font-family: 'Exo 2-Semi'; margin-top:5%; font-size:40px; ">LUAN DOS SANTOS MENDES COSTA
+			<p  style="font-size:35px;">lattes.cnpq.br/1187903879556430</p>
+		</h6>
+		</div>
+			</div>
+			<div class="row">
+				<div class="col s4">
+					<img src="../assets/vanessa.png" style="display: block;
+					margin-left: auto;
+					margin-right: auto; position:relative !important;
+		 width: 100%; height: auto;
+		">		</div>
+		<div class="col s8">
+			<h6 style="font-family: 'Exo 2-Semi'; margin-top:5%; font-size:40px; ">VANESSA GARCIA DE LIMA
+			<p  style="font-size:35px;">lattes.cnpq.br/5694207510443695</p>
+		</h6>
+		</div>
+			</div>
+			<div class="row">
+				<div class="col s12 center-align">
+					<a href="https://google.com"><img src="../assets/publi.png" style="display: block;
+					margin-left: auto;
+					margin-right: auto; position:relative !important;
+		 width: 80%; height: auto; margin-top: 10%;
+		">		</a>		</div>
+				</div>
+				<div class="row">
+					<div class="col s12">
+						<img src="../assets/ufc.png" style="display: block;
+						margin-left: auto;
+						margin-right: auto; position:relative !important;
+				width: 50%; height: auto; margin-bottom: 20%; margin-top: 3%;
+				">
+					</div>
+				</div>
+			</div>
+
+		
 </div>
 		<!--inicio do menu inferior-->
 <div class="footer-fixed">
