--- a/sobre/membros.html
+++ b/sobre/membros.html
@@ -56,7 +56,7 @@
 	<div class="col s8">
 		<h6 style="font-family: 'Exo 2-Semi'; margin-top:5%; font-size:40px; ">ANA BIATRIZ CAVALCANTE
 		<p  style="font-size:35px;">bia.cavalcante.veras@email.com</p>
-		<p  style="font-size:35px;">lattes.cnpq.br/5746352470418251</p>
+	<a href="http://lattes.cnpq.br/5746352470418251">	<p  style="font-size:35px;">lattes.cnpq.br/5746352470418251</p></a>
 	</h6>
 	</div>
 		</div>
@@ -98,7 +98,7 @@
 	<div class="col s8">
 		<h6 style="font-family: 'Exo 2-Semi'; margin-top:5%; font-size:40px; ">JOÃO VICTOR SAMPAIO DA SILVA
 		<p  style="font-size:35px;">joao5victor5ss@gmail.com</p>
-		<p  style="font-size:35px;">lattes.cnpq.br/3640158524887485</p>
+		<a href="http://lattes.cnpq.br/3640158524887485"><p  style="font-size:35px;">lattes.cnpq.br/3640158524887485</p></a>
 	</h6>
 	</div>
 		</div>
@@ -112,7 +112,7 @@
 	<div class="col s8">
 		<h6 style="font-family: 'Exo 2-Semi'; margin-top:5%; font-size:40px; ">MARIA EDUARDA FERREIRA LEANDRO
 		<p  style="font-size:35px;">mariaeduardafle@gmail.com</p>
-		<p  style="font-size:35px;">lattes.cnpq.br/2231028190063171</p>
+		<a href="http://lattes.cnpq.br/2231028190063171"><p  style="font-size:35px;">lattes.cnpq.br/2231028190063171</p></a>
 	</h6>
 	</div>
 		</div>
@@ -142,7 +142,7 @@
 		">		</div>
 		<div class="col s8">
 			<h6 style="font-family: 'Exo 2-Semi'; margin-top:5%; font-size:40px; ">PROF. DR. JOSÉ CARLOS TATMATSU ROCHA
-			<p  style="font-size:35px;">lattes.cnpq.br/5824495261923279</p>
+		<a href="http://lattes.cnpq.br/5824495261923279"><p  style="font-size:35px;">lattes.cnpq.br/5824495261923279</p></a>
 		</h6>
 		</div>
 			</div>
@@ -155,7 +155,7 @@
 		">		</div>
 		<div class="col s8">
 			<h6 style="font-family: 'Exo 2-Semi'; margin-top:5%; font-size:40px; ">ANA KAROLINE ALMEIDA DA SILVA
-			<p  style="font-size:35px;">lattes.cnpq.br/2046620233291998</p>
+			<a href="http://lattes.cnpq.br/2046620233291998"><p  style="font-size:35px;">lattes.cnpq.br/2046620233291998</p></a>
 		</h6>
 		</div>
 			</div>
@@ -168,7 +168,7 @@
 		">		</div>
 		<div class="col s8">
 			<h6 style="font-family: 'Exo 2-Semi'; margin-top:5%; font-size:40px; ">LUAN DOS SANTOS MENDES COSTA
-			<p  style="font-size:35px;">lattes.cnpq.br/1187903879556430</p>
+				<a href="http://lattes.cnpq.br/1187903879556430">	<p  style="font-size:35px;">lattes.cnpq.br/1187903879556430</p></a>
 		</h6>
 		</div>
 			</div>
@@ -181,7 +181,7 @@
 		">		</div>
 		<div class="col s8">
 			<h6 style="font-family: 'Exo 2-Semi'; margin-top:5%; font-size:40px; ">VANESSA GARCIA DE LIMA
-			<p  style="font-size:35px;">lattes.cnpq.br/5694207510443695</p>
+		<a href="http://lattes.cnpq.br/5694207510443695">	<p  style="font-size:35px;">lattes.cnpq.br/5694207510443695</p></a>
 		</h6>
 		</div>
 			</div>
