--- a/src formulario aplicar/forms_aplicar_enfermagem.html
+++ b/src formulario aplicar/forms_aplicar_enfermagem.html
@@ -55,11 +55,11 @@
 		<!--fim barra de pesquisa-->
 		<!--inicio categorias-->
 		<div class="row">
-			<a href="">
+			<a href="../enfermagem/braden.html">
 			<div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 10%; background-color: #4A96B5;">
 				   
 				<h6 style="display: inline-block; padding: 30px; position:relative !important;
-				 font-size: 50px; color: white;">lorem ipsum</h6>
+				 font-size: 50px; color: white;">Escala de Braden</h6>
 			</div>
 		</a>
 		</div>
