--- a/enfermagem/braden2.html
+++ b/enfermagem/braden2.html
@@ -136,7 +136,7 @@
 		<div class="col s12">
 				<label>
 				<input name="group4" type="radio" id="group1" value="1" />
-				  <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Totalmente móvel.</span>
+				  <span style="font-family: 'Exo 2-Regular'; color: #323B43; font-size: 35px; margin-bottom: 3%">Totalmente imóvel.</span>
 				</label>
 			  <p>
 				<label>
