--- a/perfil/perfil.html
+++ b/perfil/perfil.html
@@ -137,7 +137,7 @@
 			</div>
 			<div class="modal-footer" style="background-color: #30566B;">
 				
-				<a href="../login.html"><button class=" avanar valign-text-middle exo2-bold-white-16px modal-trigger fechar-modal modal-close" style="margin-top: 0px; display: inline-block;
+				<a href="../login.php"><button class=" avanar valign-text-middle exo2-bold-white-16px modal-trigger fechar-modal modal-close" style="margin-top: 0px; display: inline-block;
 					 width: auto; height: auto; border-style: double; border-color: #5ABBE5; color: white; text-align: center; margin-bottom: 0px;">Concluir</button></a>
 			
 			</div>
